chore: add tabWidth 2

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "trailingComma": "none",
   "semi": false,
   "arrowParens": "always",
-  "printWidth": 100
+  "printWidth": 100,
+  "tabWidth": 2
 }
