chore: add prettier-plugin-tailwindcss

--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "semi": false,
   "arrowParens": "always",
   "printWidth": 100,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
